cmake_minimum_required(VERSION 3.10)
project(tencent)

set(CMAKE_CXX_STANDARD 17)

add_executable(twoSum chapter1/twoSum.cpp)
add_executable(findMedianSortedArrays chapter1/findMedianSortedArrays.cpp)
add_executable(longestPalindrome chapter1/longestPalindrome.cpp)
add_executable(myAtoi chapter1/myAtoi.cpp)
add_executable(reverseString chapter1/reverseString.cpp)
add_executable(isValid chapter1/isValid.cpp)
add_executable(multiply chapter1/multiply.cpp)